// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association with invalid trailing text should have viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationentity', column: 14, line: 2, token: entity",
]
`;

exports[`when building association with lowercase association name should have viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationentity', column: 14, line: 2, token: entity",
]
`;

exports[`when building association with missing association name should have viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Association[1]', column: 15, line: 2, token: [1]",
]
`;

exports[`when building association with missing documentation in the first domain entity should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain' expecting {'domain entity', 'allow primary key updates'}, column: 4, line: 5, token: domain",
]
`;

exports[`when building association with missing documentation in the second domain entity should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain' expecting 'domain entity', column: 4, line: 8, token: domain",
]
`;

exports[`when building association with missing documentation should have viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationentity', column: 14, line: 2, token: entity",
]
`;

exports[`when building association with missing domain entity property should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain' expecting {'domain entity', 'allow primary key updates'}, column: 4, line: 5, token: domain",
]
`;
